# augurix

./: .gitignore  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: caches.rs  claude_path.rs  lib.rs  main.rs  poller.rs  proc.rs  store.rs  types.rs  watchers.rs
src-tauri/src/commands/: agents.rs  discover.rs  git.rs  github.rs  instances.rs  mod.rs  projects.rs  status.rs
src/components/: add-project-dialog.tsx  agent-panel.tsx  badges.tsx  diff-view.tsx  git-panel.tsx  pr-card.tsx  sidebar-rows.tsx  sidebar.tsx  status-dot.tsx
src/lib/: parse-diff.test.ts  parse-diff.ts  queries.ts  tauri.ts  utils.test.ts  utils.ts
src/routes/: __root.tsx  index.tsx  projects.$id.tsx
