[package]
name = "augurix"
version = "0.1.0"
description = "Augurix — read the signs across every project: agents, git, PRs, issues."
authors = ["Guillaume <guillaume@fusily.com>"]
edition = "2021"

[lib]
name = "augurix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.32"
notify = "7"
notify-debouncer-full = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
futures = "0.3"
dirs = "5"
anyhow = "1"
thiserror = "2"
parking_lot = "0.12"
wait-timeout = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
